--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "csv-parse": "^5.5.2",
+    "dotenv": "^16.3.1",
     "pg": "^8.11.3",
     "telegraf": "^4.15.0"
   }
