--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.2",
     "csv-parse": "^5.5.2",
     "dotenv": "^16.3.1",
     "pg": "^8.11.3",
